@@ -15,6 +15,7 @@
 
 package org.cloudfoundry.identity.uaa.provider.oauth;
 
+import org.cloudfoundry.identity.uaa.constants.ClientAuthentication;
 import org.cloudfoundry.identity.uaa.constants.OriginKeys;
 import org.cloudfoundry.identity.uaa.provider.OIDCIdentityProviderDefinition;
 import org.junit.Before;
@@ -30,8 +31,10 @@ import static org.cloudfoundry.identity.uaa.util.UaaMapUtils.entry;
 import static org.cloudfoundry.identity.uaa.util.UaaMapUtils.map;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertNotEquals;
 import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertNull;
+import static org.junit.Assert.assertThrows;
 import static org.junit.Assert.assertTrue;
 
 public class OauthIdentityProviderDefinitionFactoryBeanTest {
@@ -53,6 +56,7 @@ public class OauthIdentityProviderDefinitionFactoryBeanTest {
         idpDefinitionMap.put("tokenKeyUrl", "http://token-key.url");
         idpDefinitionMap.put("logoutUrl", "http://logout.url");
         idpDefinitionMap.put("clientAuthInBody", false);
+        idpDefinitionMap.put("cacheJwks", true);
     }
 
     @Test
@@ -120,7 +124,7 @@ public class OauthIdentityProviderDefinitionFactoryBeanTest {
     @Test
     public void jwtClientAuthenticationTrue() {
         Map<String, Map> definitions = new HashMap<>();
-        idpDefinitionMap.put("jwtclientAuthentication", new Boolean(true));
+        idpDefinitionMap.put("jwtclientAuthentication", Boolean.valueOf (true));
         idpDefinitionMap.put("type", OriginKeys.OIDC10);
         definitions.put("test", idpDefinitionMap);
         factoryBean = new OauthIDPWrapperFactoryBean(definitions);
@@ -143,7 +147,7 @@ public class OauthIdentityProviderDefinitionFactoryBeanTest {
     @Test
     public void jwtClientAuthenticationInvalidType() {
         Map<String, Map> definitions = new HashMap<>();
-        idpDefinitionMap.put("jwtclientAuthentication", new Integer(1));
+        idpDefinitionMap.put("jwtclientAuthentication", Integer.valueOf(1));
         idpDefinitionMap.put("type", OriginKeys.OIDC10);
         definitions.put("test", idpDefinitionMap);
         factoryBean = new OauthIDPWrapperFactoryBean(definitions);
@@ -165,6 +169,24 @@ public class OauthIdentityProviderDefinitionFactoryBeanTest {
         assertTrue(factoryBean.getProviders().get(0).getProvider().getConfig() instanceof OIDCIdentityProviderDefinition);
         assertNotNull(((OIDCIdentityProviderDefinition) factoryBean.getProviders().get(0).getProvider().getConfig()).getJwtClientAuthentication());
         assertEquals("issuer", (((Map<String, String>)((OIDCIdentityProviderDefinition) factoryBean.getProviders().get(0).getProvider().getConfig()).getJwtClientAuthentication()).get("iss")));
+    }
+
+    @Test
+    public void jwtClientAuthenticationWith2EntriesButNewOneMustWin() {
+        // given: 2 similar entry because of issue #2752
+        idpDefinitionMap.put("jwtclientAuthentication", Map.of("iss", "issuer"));
+        idpDefinitionMap.put("jwtClientAuthentication", Map.of("iss", "trueIssuer"));
+        idpDefinitionMap.put("type", OriginKeys.OIDC10);
+        Map<String, Map> definitions = new HashMap<>();
+        definitions.put("test", idpDefinitionMap);
+        // when: load beans from uaa.yml
+        factoryBean = new OauthIDPWrapperFactoryBean(definitions);
+        factoryBean.setCommonProperties(idpDefinitionMap, providerDefinition);
+        // then
+        assertTrue(factoryBean.getProviders().get(0).getProvider().getConfig() instanceof OIDCIdentityProviderDefinition);
+        assertNotNull(((OIDCIdentityProviderDefinition) factoryBean.getProviders().get(0).getProvider().getConfig()).getJwtClientAuthentication());
+        assertNotEquals("issuer", (((Map<String, String>)((OIDCIdentityProviderDefinition) factoryBean.getProviders().get(0).getProvider().getConfig()).getJwtClientAuthentication()).get("iss")));
+        assertEquals("trueIssuer", (((Map<String, String>)((OIDCIdentityProviderDefinition) factoryBean.getProviders().get(0).getProvider().getConfig()).getJwtClientAuthentication()).get("iss")));
     }
 
     @Test
@@ -233,5 +255,49 @@ public class OauthIdentityProviderDefinitionFactoryBeanTest {
         assertTrue(factoryBean.getProviders().get(0).getProvider().getConfig() instanceof OIDCIdentityProviderDefinition);
         Map<String, String> receivedParameters = ((OIDCIdentityProviderDefinition) factoryBean.getProviders().get(0).getProvider().getConfig()).getAdditionalAuthzParameters();
         assertEquals(0, receivedParameters.size());
+    }
+
+    @Test
+    public void testPerformRpInitiatedLogoutTrue() {
+        idpDefinitionMap.put("performRpInitiatedLogout", true);
+        factoryBean.setCommonProperties(idpDefinitionMap, providerDefinition);
+        assertTrue(providerDefinition.isPerformRpInitiatedLogout());
+    }
+
+    @Test
+    public void testPerformRpInitiatedLogoutFalse() {
+        idpDefinitionMap.put("performRpInitiatedLogout", false);
+        factoryBean.setCommonProperties(idpDefinitionMap, providerDefinition);
+        assertFalse(providerDefinition.isPerformRpInitiatedLogout());
+    }
+
+    @Test
+    public void testAuthMethodNotSet() {
+        factoryBean.setCommonProperties(idpDefinitionMap, providerDefinition);
+        assertNull(providerDefinition.getAuthMethod());
+        assertEquals(ClientAuthentication.CLIENT_SECRET_BASIC, ClientAuthentication.getCalculatedMethod(providerDefinition.getAuthMethod(), providerDefinition.getRelyingPartySecret() != null, providerDefinition.getJwtClientAuthentication() != null));
+    }
+
+    @Test
+    public void testAuthMethodSetInvalidValue() {
+        idpDefinitionMap.put("authMethod", "empty");
+        assertThrows(IllegalArgumentException.class, () -> factoryBean.setCommonProperties(idpDefinitionMap, providerDefinition));
+    }
+
+    @Test
+    public void testAuthMethodSet() {
+        // given: jwtclientAuthentication, but overrule it with authMethod=none
+        idpDefinitionMap.put("jwtclientAuthentication", true);
+        idpDefinitionMap.put("authMethod", "none");
+        idpDefinitionMap.put("type", OriginKeys.OIDC10);
+        Map<String, Map> definitions = new HashMap<>();
+        definitions.put("new.idp", idpDefinitionMap);
+        // when: load beans from uaa.yml
+        factoryBean = new OauthIDPWrapperFactoryBean(definitions);
+        factoryBean.setCommonProperties(idpDefinitionMap, providerDefinition);
+        // then
+        assertTrue(factoryBean.getProviders().get(0).getProvider().getConfig() instanceof OIDCIdentityProviderDefinition);
+        assertNotNull(((OIDCIdentityProviderDefinition) factoryBean.getProviders().get(0).getProvider().getConfig()).getJwtClientAuthentication());
+        assertEquals("none", (((OIDCIdentityProviderDefinition) factoryBean.getProviders().get(0).getProvider().getConfig()).getAuthMethod()));
     }
 }
